# cctop

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/cctop/: __init__.py  backends.py  cli.py  export.py  gaussian.py  models.py  orca.py  qchem.py  render.py  scan.py  tui.py  vasp.py  xtb.py
testing/demo_orca_project/: README.md
testing/demo_orca_project/conformer_a/: orca.out
testing/demo_orca_project/conformer_b/: orca.out
testing/demo_orca_project/metal_complex_scf/: orca.out
testing/demo_orca_project/running_scan/: orca.out
testing/demo_orca_project/single_point/: orca.out
testing/mock_orca_project/: README.md
testing/mock_orca_project/conformer_001/: orca.out
testing/mock_orca_project/conformer_002_imag/: orca.out
testing/mock_orca_project/failed_scf/: orca.out
testing/mock_orca_project/running_job/: orca.out
tests/: __init__.py  test_backends.py  test_cli.py  test_export.py  test_gaussian_parser.py  test_orca_parser.py  test_qchem_parser.py  test_real_fixtures.py  test_vasp_parser.py  test_xtb_parser.py
tests/fixtures/: orca_done.out
tests/fixtures/real/: README.md
