[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "compchem-cctop"
version = "0.2.0"
description = "A minimal terminal dashboard for computational chemistry output files."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "cctop contributors" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["computational-chemistry", "orca", "vasp", "gaussian", "qchem", "xtb", "cli", "tui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
]

[project.scripts]
cctop = "cctop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
